--- a/final/src/main/webapp/WEB-INF/web.xml
+++ b/final/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,21 @@
       <filter-name>ObjectifyFilter</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <filter>
+        <filter-name>guiceFilter</filter-name>
+        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>guiceFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+
     <listener>
       <listener-class>com.example.guestbook.OfyHelper</listener-class>
     </listener>
